test_data/end_to_end/err__main_must_have_unit_return_type/stderr.txt
error: `main` function must have unit return type
  --> main.cz:1:14
1 | fn main() -> i32 {
                 ~~~
